# gpu-compute

./: .gitignore  Cargo.toml  README.md
headers/: cuda.cu  opencl.cl
src/: cuda.rs  enums.rs  error.rs  function.rs  generic.rs  grid.rs  lib.rs  opencl.rs  program.rs  util.rs
src/backend/: cuda.rs  generic.rs  mod.rs  opencl.rs
